# learning-iot

./: .gitignore  README.md  esp8266.md  setenv.sh
bluez-mesh/: Makefile
doc/: ble_temperature_issue.md  bluetooth.md  buspirate.md  c.md  clocks.md  cortex-m.md  crypto.md  drogue-iot.md  esp8266.md  fault-injection.md  fpga.md  gdb.md  microbit.md  nfc.md  nrf.md  openocd.md  osclloscope.md  rf.md  rust.md  startup.md  uart-issue.md  usart.md  zephyr.md
drogue-led/: Cargo.toml
drogue-led/.cargo/: config.toml
drogue-led/src/: main.rs
embassy-led/: Cargo.toml  README.md
embassy-led/src/: main.rs
esp32-c3/: .gitignore  Makefile  README.md  hello.s  linker-script.ld
fpga/: .gitignore  Makefile  README.md  debounce.v  first.pcf  first.v  led.pcf  led.v  led_no_bounce.v
fpga/src/: blink.pcf  blink.v  debounce.v  led_no_bounce.v
microrust-start/: Cargo.toml
microrust-start/.cargo/: config.toml
microrust-start/src/: main.rs
notes/: ble_temperature_issue.md  bluetooth.md  c.md  clocks.md  cortex-m.md  cyw43439.md  digitaltwin.md  drogue-iot.md  embassy.md  embedded_hal.md  esp32-c3.md  esp8266.md  lora.md  microbit-blinky.hex  microbit-probe-issue.md  microbit.md  microshift.md  mqtt.md  nb-iot.md  nfc.md  nrf.md  oniro.md  openocd.md  osclloscope.md  rf.md  risc-v.md  rp.md  rp_gdbinit  rust.md  sdio.md  sigfox.md  spi_issue.md  startup.md  uart-issue.md  wifi.md
nrf/: .gitignore  Makefile  README.md  linker_script.ld
nrf/aes/: Makefile  aes-ccm.s  rand.s
nrf/ble/: Makefile  README.md  ble_c.c  ble_p.c  linker_script.ld  main.c
nrf/led/: Makefile  README.md  led-ext-gpiote.s  led-ext-microbit.s  led-ext.s  led.s
nrf/misc/: Makefile  startup.s
nrf/nfc/: Makefile  README.md  nfc.s
nrf/timer/: Makefile  systick.s  timer.s  timer0-int.s
rp/: Makefile  elf2uf2  linker_script.ld
rp/led/: .gitignore  Makefile  led-ext.s  led.s  opendrain.s
rp/rust/led/: Cargo.toml  memory.x  openocd.gdb  openocd.sh
rp/rust/led/.cargo/: config.toml
rp/rust/led/src/: main.rs
rust-hal/: Cargo.toml  README.md
rust-hal/src/: main.rs
rust-low-level/: Cargo.toml  README.md  linker-script.ld
rust-low-level/.cargo/: config.toml
rust-low-level/src/: main.rs
rust-pac/: Cargo.toml  README.md  memory.x
rust-pac/.cargo/: config.toml
rust-pac/src/: main.rs
src/: microbit-Flashing-Heart.hex
stm32f0-discovery/: Makefile  README.md  adc.s  blue-led.s  can-c.s  can-loopback.s  can-p.s  can.s  delay.s  gpio.s  i2c-c.s  i2c-p.s  i2c.s  led.s  led_bsrr.s  led_button.s  linker_script.ld  mco.s  pull-up.s  spi-c.s  spi-p.s  spi.s  systick.s  systickint.s  tim2.s  uart-rx-sync.s  uart-tx-sync.s  uart-tx.s  uart.s
stm32f0-discovery/can/: Makefile  README.md  can.s
stm32f0-discovery/i2c/: Makefile  README.md  i2c.s
stm32f0-discovery/led/: Makefile  README.md  blue-led.s  led-ext.s  led.s  led_bsrr.s
stm32f0-discovery/misc/: Makefile
stm32f0-discovery/spi/: Makefile  README.md  spi.s
stm32f0-discovery/timer/: Makefile  README.md  delay.s  systick.s  systickint.s
(+12 files in other folders)
