[package]
name = "led"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = { version = "0.7.0" }
embedded-hal = { version = "0.2.5", features = ["unproven"] }
rp-pico = "0.3.0"
embedded-time = "0.12.0"
#panic-probe = { version = "0.3.0", features = ["print-defmt"] }
#panic-halt = "0.2.0"
panic-abort = "0.3.2"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
#panic-probe = { version = "0.3.0", features = ["print-defmt"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

